--- a/dev-python/Dockerfile
+++ b/dev-python/Dockerfile
@@ -10,4 +10,4 @@ ENV PATH="${PATH}:/home/archie/.local/bin"
 RUN pip install --user --upgrade pip
 RUN pip install --user jedi flake8 autopep8 yapf
 
-CMD /usr/bin/bash
+CMD /bin/bash
