get python env working with elpy

--- a/dev-python/Dockerfile
+++ b/dev-python/Dockerfile
@@ -8,6 +8,11 @@ USER archie
 ENV PATH="${PATH}:/home/archie/.local/bin"
 
 RUN pip install --user --upgrade pip
-RUN pip install --user jedi flake8 autopep8 yapf
+RUN pip install --user jedi flake8 autopep8 yapf black
+
+RUN pip install --user ipython pandas numpy seaborn scikit-learn statsmodels
+COPY install.el install.el
+COPY .emacs .emacs
+RUN emacs --script install.el
 
 CMD /bin/bash
